--- a/dictionary.html
+++ b/dictionary.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <label for="word">Search or save your word!</label>
-    <input type="text" id="word" placeholder="Enter a word" onkeypress="allowOnlyLetters(event)" required>
+    <input type="text" id="word" placeholder="Enter a word" onkeypress="allowOnlyLetters(event)">
     <button type="button" id="save" onclick="saveWord()">
         Save</button>
     <button type="submit" id="search" onclick="searchWord()">
